# osprey

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  TESTING_GUIDE.md  env.example  genindex.html  index.html  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/: dependabot.yml
_sources/: index.rst
aps-control-assistant/: .env.example  .loglogin  README.md  claude_generator_config.yml  config.yml  config.yml.save  config.yml~  pyproject.toml  requirements.txt
aps-control-assistant/src/aps_control_assistant/: __init__.py  context_classes.py  registry.py
aps-control-assistant/src/aps_control_assistant/capabilities/: aps_archiver.py  archiver_plotting.py  archiver_retrieval.py  channel_finding.py  channel_value_retrieval.py
aps-control-assistant/src/aps_control_assistant/data/channel_databases/: gen_srcorr_pvs.py  srcorr.json
aps-control-assistant/src/aps_control_assistant/data/tools/: build_channel_database.py  llm_channel_namer.py  preview_database.py  pv_catalog.py  pv_data_handler.py  use_restapi.py  validate_database.py
aps-control-assistant/src/aps_control_assistant/services/channel_finder/: cli.py
aps-control-assistant/src/aps_control_assistant/services/channel_finder/benchmarks/: cli.py  runner.py
architecture/: mcp-servers.html
cli-reference/: index.html
contributing/: index.html
docs/: OSPREY_GUI_USER_MANUAL.md
getting-started/: conceptual-tutorial.html  control-assistant.html  hello-world-tutorial.html  index.html  installation.html  osprey-build-interview.html
(+838 files in other folders)
